        
    Bug Fixes
        - Add more tracked fields in version notification email.
        - Fixed NPE when browser cookie is disabled.
        - Fixed bug view render wrongly in some rare cases.
        - Fixed overflow tooltip title if it is too long
        - Minor bug fix of project activity stream
        - Fixed confirm dialog body text size calculation wrongly
    
    
    Changelog from MyCollab 4.3.0
    =============================
    Improvements
        - Upgrade Reflections to 0.9.9-RC2
        - Upgrade Guava to 15.0
        - Support Japanese in reporting
        - Internalization reporting module
        - Improve UIs
        - Update mobile edition
    
    Bug Fixes
        - Can not save user in some special case
        - Minor bug fixes in inviting project member
        - Can not assign new role to project member
        - Notification Dialog has useless header
        - Minor UI bugs on IE
        - Can not 'remember password' in IE
    
    
    Changelog from MyCollab 4.2.0
    =============================
    Improvements
        - Upgrade Vaadin to 7.2.4
        - Upgrade HirakiCP to 4.2.0
        - Update mobile edition
        - Improve Gantt chart display 
        - Add Simple view of phase
        - Support Japanese localization
        - Emails are localized per language
        - Support lazy load view
        - Allow user can select the default system language
        - Focus in system stable by adding many unit tests and refactor the system
        
    Bug Fixes
        - Exception is thrown when user save customized view
        - Exception is thrown when user save search result
        - Can not save login credential in mobile edition    
        - Can not add new role or edit role name of existing item
        - Save duplicate monitor items
    
    Changelog from MyCollab 4.1.1
    =============================
    Improvements
        - Upgrade Vaadin to 7.2.2
        - Upgrade Apache Camel to 2.13.1