@@ -1,53 +1,0 @@
-/**
- * This file is part of mycollab-core.
- *
- * mycollab-core is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * mycollab-core is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- *
- * You should have received a copy of the GNU General Public License
- * along with mycollab-core.  If not, see <http://www.gnu.org/licenses/>.
- */
-package com.esofthead.mycollab.core.utils;
-
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-
-/**
- * 
- * @author MyCollab Ltd.
- * @since 1.0
- * 
- */
-public class EmailValidator {
-
-	private Pattern pattern;
-	private Matcher matcher;
-
-	public static final String EMAIL_PATTERN = "^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@"
-			+ "[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$";
-
-	public EmailValidator() {
-		pattern = Pattern.compile(EMAIL_PATTERN);
-	}
-
-	/**
-	 * Validate hex with regular expression
-	 * 
-	 * @param strVal
-	 *            hex for validation
-	 * @return true valid hex, false invalid hex
-	 */
-	public boolean validate(final String strVal) {
-
-		matcher = pattern.matcher(strVal);
-		return matcher.matches();
-
-	}
-}
