@@ -55,6 +55,7 @@
         - Fixed overflow tooltip title if it is too long
         - Minor bug fix of project activity stream
         - Fixed confirm dialog body text size calculation wrongly
+        - Validate email fails in several email formats
     
     
     Changelog from MyCollab 4.3.0
